--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello World!</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum fuga reprehenderit animi, non ab doloremque placeat aspernatur mollitia autem ea nam eius obcaecati facere expedita odit est exercitationem! Quos, cumque.</p>
+    <h2>Pain You Gain</h2>
 </body>
 </html>
